--- a/reports/invoice_Inherit.xml
+++ b/reports/invoice_Inherit.xml
@@ -2,14 +2,10 @@
 <odoo>
     <template id="medsaf_invoice_inherit" inherit_id="account.report_invoice_document">
         <xpath expr="//p[@t-if='o.reference']" position="after">
-            <div class="row">
-                <table class="table table-sm table-borderless">
-                    <tr><td>Account Name: Disrupt Pharma Tech Limited</td></tr>
-                    <tr><td>Account number: 0232909459</td></tr>
-                    <tr><td>Bank: Guaranty Trust Bank Plc</td></tr>
-                    <tr><td>TIN: 20045841-0001</td></tr>
-                </table>
-            </div>
+            <p>Account Name: Disrupt Pharma Tech Limited</p>
+            <p>Account number: 0232909459</p>
+            <p>Bank: Guaranty Trust Bank Plc</p>
+            <p>TIN: 20045841-0001</p>
         </xpath>
     </template>
 </odoo>
